# stock-market-visualizer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  LICENSE  README.md  TODO  certificate_steps.txt  docker-compose-dev.yml  docker-compose.yml  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docker-image.yml
default_configs/: puru_arkk_hedge.json  view_config.json
stock_market_visualizer/app/: callbacks.py  checkable_table.py  config.py  config_store.py  cookie_policy.py  date.py  disclaimer.py  dropdown_button.py  engine.py  graph.py  header.py  indicator.py  indicators.py  interval.py  layout.py  main.py  redis_helper.py  restoreable_state.py  signals.py  sme_api_helper.py  stock_market_engine_api.py  ticker.py
stock_market_visualizer/app/assets/: style.css
stock_market_visualizer/app/callbacks/: __init__.py  callback_helper.py  checkable_table_dropdown_callbacks.py  date_callbacks.py  graph_callbacks.py  header_callbacks.py  indicator_callbacks.py  interval_callbacks.py  restoreable_state_callbacks.py  signal_callbacks.py  ticker_callbacks.py
stock_market_visualizer/app/layouts/: __init__.py  checkable_table_dropdown_layout.py  date_layout.py  dropdown_button_layout.py  header_layout.py  indicator_layout.py  interval_layout.py  layout.py  signal_layout.py  ticker_layout.py
stock_market_visualizer/app/signals/: __init__.py  common.py  crossover_signal_detector.py  cyto_graph.py  graph_signal_detector.py  signals.py  ticker_signal_detector.py  trivial_signal_detector.py
stock_market_visualizer/common/: button.py  checkable_table.py  dropdown_button.py  logging.py  requests.py  sync_wrapper.py  utils.py
