[metadata]
name = stock-market-visualizer
version = v0.1
author = Mattias De Charleroy
author_email = mattias.decharleroy@gmail.com
url = https://bitbucket.org/MattiasDC/{name}
platform = any

[options]
python_requires = >= 3.9
packages = find:
install_requires =
	dash
	dash-extensions
	dash-bootstrap-components
	fastapi
	hiredis
	pandas
	plotly
	py-utils @ git+https://bitbucket.org/MattiasDC/py-utils.git@master
	redis
	requests
	starlette
	uvicorn
	stock-market-lib @ git+https://bitbucket.org/MattiasDC/stock-market-lib.git@master