[metadata]
name = stock-market-visualizer
version = v0.1
author = Mattias De Charleroy
author_email = mattias.decharleroy@gmail.com
url = https://bitbucket.org/MattiasDC/stock-market-visualizer
platform = any

[options]
python_requires = >= 3.9
packages = find:
install_requires =
	dash
	dash-cytoscape
	dash-extensions
	dash-bootstrap-components
	fastapi
	hiredis
	httpx
	pandas
	plotly
	py-utils @ git+https://bitbucket.org/MattiasDC/py-utils.git@master
	redis
	requests
	starlette
	uvicorn
	stock-market-lib @ git+https://bitbucket.org/MattiasDC/stock-market-lib.git@master

[options.extras_require]
dev =
	black
	flake8
	isort
	nox
	pre-commit
	yamllint

[flake8]
max-line-length = 88
exclude =
	.env
	.nox
	*.egg-info
	.build

[isort]
profile = black
skip =
	.env
	.nox
	*.egg-info
	.build