[metadata]
name = stock-market-visualizer
version = attr: stock_market_visualizer.__version__
author = Mattias De Charleroy
author_email = mattias.decharleroy@gmail.com
url = https://bitbucket.org/MattiasDC/stock-market-visualizer
platform = any
long_description = stock-market-visualizer is a [Dash](https://dash.plotly.com/) application that can be used to explore stocks and indicators over time. It's uses the [stock-market-engine](https://bitbucket.org/MattiasDC/stock-market-engine.git) microservice.

[options]
python_requires = >= 3.10
packages = find:
install_requires =
	backoff
	dash
	dash-cytoscape
	dash-extensions
	dash-bootstrap-components
	python-dateutil
	fastapi
	hiredis
	httpx
	httpx-cache
	lru-dict
	msgpack
	pandas
	plotly
	simputils==0.1.0
	redis
	requests
	starlette
	ujson
	uvicorn
	stock-market-lib==0.1.5

[options.extras_require]
dev =
	black
	flake8
	isort
	nox
	pre-commit
	pytest
	yamllint

[flake8]
max-line-length = 88
exclude =
	.env
	.nox
	*.egg-info
	.build

[isort]
profile = black
skip =
	.env
	.nox
	*.egg-info
	.build